<resources>
    <string name="app_name">spaffed</string>
    <string name="name">spaffed</string>
    <string name="action_settings">Settings</string>
    <string name="action_favorite">Favorite</string>
    <string name="submit">Submit</string>
    <string name="email">Spotify Email</string>
    <string name="password">Spotify password</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign in</string>
    <string name="error">Email or Password does not exist</string>

    <string name="confirm_changes">Confirm Changes</string>
    <string name="delete_account">Delete Account</string>
    <string name="edit_profile">Edit Profile:</string>

    <string name="loading">Loading</string>

    <string name="past_wraps_title">Past Wraps</string>
    <string name="past_wraps_subtitle">A walk through history</string>

    <string name="font_primary">Helvetica</string>

    <string name="your">Your</string>
    <string name="date">{date}</string>
    <string name="your_music_this_week">Your Music This Week</string>
    <string name="your_music_this_month">Your Music This Month</string>
    <string name="your_music_this_year">Your Music This Year</string>
    <string name="top_tracks">Top Tracks</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="top_artists">Top Artists</string>
    <string name="top_playlists">Top Playlists</string>
    <string name="top_genre_text">Spaffed AI Analysis Generating...</string>
    <string name="dd_mm_yy">DD/MM/YY</string>
    <string name="username">user214</string>
    <string name="public_wraps_title">Public Wraps</string>
    <string name="community_subtitle">What the community is listening to</string>
    <string name="generate_wrapped">Generate Wrapped🎵🎶</string>

</resources>